# Second-order-nonlinear-optimization-via-GPU

./: .gitignore  .~lock.Tests.ods#  .~lock.minLBFGS10.csv#  10-0.1-B.csv  10-0.5-A.csv  100-0.1-B.csv  100-0.5-A.csv  100-0.5-B.csv  1000-0.5-A.csv  CMakeLists.txt  GD_const_2000_128.txt  GD_global_2000_128.txt  Lattice.gv  Makefile  README.md  SNLP.py  Tests.ods  a.out  analysis.py  biggestContext.cxt  buildRun.sh  checkGPU.py  costOrderTestCaseAverage.ods  costOrderTestCaseAverageTop5.csv  dvhop.py  dvhopConverter.py  finalModel-Hyper.csv  finalModelGD.csv  finalModelLBFGS.csv  gd  generate.py  logs1000  main.cu  minLBFGS10.csv  oldfinalModelGD.csv  oldfinalModelLBFGS.csv  requirements.txt  run.py  runConfig.py  startexp.sh  (+4 more)
SNLP/: SNLP_visualizer.py  anchorGenerator.py  problemGenerator.py  watch.sh
SNLP/logs/: triangle1.csv  triangle1.edge  triangle2.logs
SNLP/problems/poly10/: poly10.snlp
SNLP/problems/poly100/: poly100.snlp  poly100.snlpa  spiral.snlp
SNLP/problems/poly1000/: poly1000.snlp  poly1000.snlpa
SNLP/problems/triangle2/: triangleproblem.snlp
SNLP2D/problems/dvhopbench/: anchorflags.csv  anchors.csv  distances.csv  dvhop27-400-100.pop  dvhopfinal.pop  exported.snlp  exportedDVHop.snlp  exportedDVHop.snlpa  exportedanchorflags.csv  exportedanchors.csv  exporteddistances.csv  exportedneighbors.csv  exportedproblem.ods  init.pop  neighbors.csv  probleconverter.py  random227-400-1.pop  random227-400-10.pop  random227-400-100.pop  random227-400-200.pop  random227-400-4.pop  random227-400-400.pop
SNLP2D/problems/gridtest/: random220-400-1.pop  random220-400-20.pop  random2200-400-1.pop  spiral.snlp  spiral.snlpa
SNLP2D/problems/poly100/: spiral.snlp  spiral.snlpa
SNLP3D/: SNLP_visualizer.py  anchorGenerator.py  problemGenerator.py  watch.sh
SNLP3D/problems/gridtest/: random10-0.1-1.pop  random10-0.1-20.pop  random10-0.1-5.pop  random10-0.1.pop  random10-0.1.snlp  random10-0.1.snlpa  random10-0.5-1.pop  random10-0.5-20.pop  random10-0.5-5.pop  random10-0.5.pop  (+232 more)
analysis/: 10-0.1-A.csv  10-0.5-B.csv  100-0.1-A.csv  1000-0.1-A.csv  1000-0.1-B.csv  1000-0.5-B.csv  bigcontext.cxt  costOrderTestCaseAverage.csv  costOrderTestCaseSTD.csv  logs100  minLBFGS.csv  minLBFGSperNFracPopTestCase.csv  smallcontext.cxt
core/AD/: DDouble.cpp  DDouble.cuh  DFloat.cpp  DFloat.cuh  DFunction.cpp  DFunction.cuh  DIDFunction.cuh  DMinusFunction.cuh  DMultiplicationFunction.cuh  DPlusFunction.cuh  HeapSet.cuh  Operations.cuh
core/common/: CommonStringUtils.h  Constants.cuh  FIFOQueue.cuh  Metrics.cuh  ModelMetrics.cuh  OptimizerContext.cuh  Random.cuh  Statistics.cuh  Tests.cuh
core/optimizer/: DifferentialEvolution.cuh  GD.cuh  GradientDescent.cuh  LBFGS.cuh  Operator.h
core/problem/: F1.cuh  PlaneFitting.cuh  Problem.cuh  Rosenbrock2D.cuh  SNLP.cuh  SNLPAnchor.cuh
hhanalysis/experiment/: Makefile  nohup.out.1  run.py
hhanalysis/logs/: qing.json  rastrigin.json  records.json  rosenbrock.json  schwefel223.json  styblinskitang.json  trid.json
libs/: libnomadEval.so.4.3.1  libnomadUtils.so.4.3
(+1145 files in other folders)
